--- a/assets/src/css/dashboard.css
+++ b/assets/src/css/dashboard.css
@@ -24,6 +24,7 @@
   --bs-border-radius-sm: 0.25rem;
   --bs-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.25);
   --bs-dark-color: #2c3338;
+  --bs-warning: #ffc107;
 }
 
 .koko-analytics {
@@ -159,8 +160,6 @@
   flex: 0 0 auto;
   width: 100%;
 }
-
-
 /* end grid */
 
 /* tables */
@@ -173,9 +172,8 @@
 .ka-table th,
 .ka-table td {
   text-align: left;
-  border-top: 1px solid #efefef;
-  border-top-color: rgb(239, 239, 239);
-  padding: 6px 8px;
+  border-top: 1px solid rgb(240, 240, 240);
+  padding: 0.4rem 0.6rem;
 }
 .ka-table th {
   background: var(--bs-dark-color);
@@ -185,7 +183,7 @@
 .ka-table th:first-child {
   border-top-left-radius: 6px;
 }
-.ka-table th:last-of-type {
+.ka-table th:last-child {
     border-top-right-radius: 6px;
 }
 .w-10ch {
@@ -352,7 +350,7 @@ textarea.ka-input {
 .ka-pagination {
   display: flex;
   padding: 0.5rem 1rem;
-  border-top: 1px solid var(--bs-border-color);
+  border-top: 1px solid rgb(240, 240, 240);
 }
 .ka-pagination--next {
     margin-left: auto;
@@ -371,6 +369,7 @@ textarea.ka-input {
 .me-3 { margin-right: 1rem !important; }
 .me-4 { margin-right: 1.5rem !important; }
 .me-5 { margin-right: 3rem !important; }
+.mb-0 { margin-bottom: 0 !important; }
 .mb-1 { margin-bottom: 0.25rem !important; }
 .mb-2 { margin-bottom: 0.5rem !important; }
 .mb-3 { margin-bottom: 1rem !important; }
@@ -409,6 +408,10 @@ textarea.ka-input {
 .text-start { text-align: left !important; }
 .text-center { text-align: center !important; }
 .text-white { color: white !important; }
+.text-black {
+  --bs-text-opacity: 1;
+  color: rgba(var(--bs-black-rgb), var(--bs-text-opacity)) !important;
+}
 .text-success { color: limegreen !important; }
 .text-danger { color: #fb7272 !important; }
 .text-muted { color: #646970 !important; }
@@ -439,7 +442,8 @@ textarea.ka-input {
 
 /* buttons */
 
-.btn {
+.btn,
+.koko-analytics .btn {
   --bs-btn-padding-x: 0.75rem;
   --bs-btn-padding-y: 0.375rem;
   --bs-btn-font-family: ;
@@ -490,7 +494,8 @@ textarea.ka-input {
   --bs-btn-font-size: 0.875rem;
   --bs-btn-border-radius: var(--bs-border-radius-sm);
 }
-.btn-primary {
+.btn-primary,
+.koko-analytics .btn-primary {
   --bs-btn-color: #fff;
   --bs-btn-bg: #0d6efd;
   --bs-btn-border-color: #0d6efd;
@@ -507,7 +512,8 @@ textarea.ka-input {
   --bs-btn-disabled-border-color: #0d6efd;
 }
 
-.btn-secondary {
+.btn-secondary,
+.koko-analytics .btn-secondary {
   --bs-btn-color: #fff;
   --bs-btn-bg: #6c757d;
   --bs-btn-border-color: #6c757d;
@@ -524,7 +530,8 @@ textarea.ka-input {
   --bs-btn-disabled-border-color: #6c757d;
 }
 
-.btn-danger {
+.btn-danger,
+.koko-analytics .btn-danger {
   --bs-btn-color: #fff;
   --bs-btn-bg: #dc3545;
   --bs-btn-border-color: #dc3545;
