--- a/assets/src/css/dashboard-2.css
+++ b/assets/src/css/dashboard-2.css
@@ -76,13 +76,11 @@ body.koko-analytics {
 /* filters (top of dashboard) */
 .ka-filter {
   display: inline-block;
-  padding: 0.5rem;
-  margin-bottom: 0.5rem;
+  padding: 0.75rem;
   cursor: pointer;
   font-size: 1rem;
   line-height: 1rem;
   background: #fff;
-  border: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color) !important;
   border-radius: var(--bs-border-radius);
 }
 .ka-filter:hover,
@@ -410,14 +408,15 @@ textarea.ka-input {
 .ms-5 { margin-left: 3rem !important; }
 
 .p-0 { padding: 0 !important; }
-.p-1 { padding: 0.25rem; }
-.p-2 { padding: 0.5rem; }
+.p-1 { padding: 0.25rem !important; }
+.p-2 { padding: 0.5rem !important; }
 .p-3 { padding: 1rem !important; }
-.p-4 { padding: 1.5rem; }
-.p-5 { padding: 3rem; }
+.p-4 { padding: 1.5rem !important; }
+.p-5 { padding: 3rem !important; }
 .pt-0 { padding-top: 0 !important; }
 
 .g-3 { --bs-gutter-x: 1rem; --bs-gutter-y: 1rem; }
+.gap-2 { gap: 0.5rem !important; }
 .gap-3 { gap: 1rem !important; }
 .gap-5 { gap: 3rem !important; }
 
@@ -604,7 +603,6 @@ textarea.ka-input {
     flex: 0 0 auto;
     width: 66.66666667%;
   }
-  .ka-filter { margin-bottom: 0 !important; }
   .d-lg-flex {
     display: flex;
     flex-flow: row wrap;
