in get_client_ip, use first non-private address as IP

--- a/assets/src/css/dashboard-2.css
+++ b/assets/src/css/dashboard-2.css
@@ -82,6 +82,7 @@ body.koko-analytics {
   font-size: 1rem;
   line-height: 1rem;
   background: #fff;
+  border: 0;
   border-radius: var(--bs-border-radius);
 }
 .ka-filter:hover,
