--- a/assets/src/css/dashboard-2.css
+++ b/assets/src/css/dashboard-2.css
@@ -4,8 +4,7 @@
 :root {
   --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   --bs-body-font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  --bs-body-font-size: 1rem;
-  --bs-body-font-weight: 400;
+  --bs-body-font-size: 15px;
   --bs-body-line-height: 1.5;
   --bs-body-color: #212529;
   --bs-body-bg: #fff;
@@ -32,7 +31,6 @@
 .koko-analytics {
   font-family: var(--bs-body-font-family);
   font-size: var(--bs-body-font-size);
-  font-weight: var(--bs-body-font-weight);
   line-height: var(--bs-body-line-height);
   color: var(--bs-body-color);
   background: #efefef;
@@ -100,7 +98,7 @@ body.koko-analytics {
 .ka-chart--tooltip {
   position: absolute;
   z-index: 9991; /* above wp admin menu */
-  font-size: 1rem;
+  font-size: 0.9rem;
 }
 .ka-chart--tooltip-box {
   background: var(--bs-dark-color);
