--- a/assets/src/css/dashboard-2.css
+++ b/assets/src/css/dashboard-2.css
@@ -213,7 +213,7 @@ body.koko-analytics {
 .ka-table th:last-child {
     border-top-right-radius: 6px;
 }
-.w-fit { width: 40px; min-width: fit-content; }
+.w-fit { width: 6ch; min-width: fit-content; }
 /* end tables */
 
 /* forms */
