--- a/assets/src/css/dashboard-2.css
+++ b/assets/src/css/dashboard-2.css
@@ -77,8 +77,8 @@ body.koko-analytics {
   display: inline-block;
   padding: 0.75rem;
   cursor: pointer;
-  font-size: 1rem;
-  line-height: 1rem;
+  font-size: var(--bs-body-font-size);
+  line-height: 1;
   background: #fff;
   border: 0;
   border-radius: var(--bs-border-radius);
@@ -229,7 +229,7 @@ body.koko-analytics {
   max-width: none;
   padding: .375rem .75rem;
   font-family: var(--bs-body-font-family);
-  font-size: 1rem;
+  font-size: var(--bs-body-font-size);
   font-weight: 400;
   line-height: 1.5;
   color: var(--bs-body-color);
@@ -327,7 +327,7 @@ textarea.ka-input {
   width: 100%;
   max-width: none;
   padding: .375rem 2.25rem .375rem .75rem;
-  font-size: 1rem;
+  font-size: var(--bs-body-font-size);
   font-weight: 400;
   line-height: 1.5;
   color: var(--bs-body-color);
