--- a/assets/src/css/dashboard-2.css
+++ b/assets/src/css/dashboard-2.css
@@ -168,6 +168,12 @@ body.koko-analytics {
   opacity: 1;
 }
 
+/* settings pages */
+.ka-settings-nav { padding: 0; margin: 0; }
+.ka-settings-nav a { color: rgba(33, 37, 41, 0.8); text-decoration: none; display: inline-block; width: 100%; height: 100%; padding: 0.25rem 0.5rem; border-radius: 0.4rem; }
+.ka-settings-nav a.active { background: #DEDEDE; font-weight: bold; color: rgb(33, 37, 41); }
+.ka-settings-main { background: white; padding: 2rem; border-radius: 0.4rem;  box-shadow: rgba(0, 0, 0, 0.05) 0px 2px 4px 0px; }
+
 /* grid */
 .ka-row {
   --bs-gutter-x: 1.5rem;
