[dashboard] grey out pagination when page filter is active

--- a/assets/src/css/dashboard-2.css
+++ b/assets/src/css/dashboard-2.css
@@ -161,7 +161,8 @@ body.koko-analytics {
   fill: #195585;
 }
 
-.page-filter-active tr  {
+.page-filter-active tr,
+.page-filter-active .ka-pagination  {
   opacity: 0.5;
 }
 .page-filter-active tr.page-filter-active  {
